fix for intro on mobile.

--- a/support/blocks/intro/_style-block.scss
+++ b/support/blocks/intro/_style-block.scss
@@ -77,7 +77,7 @@
 	flex-wrap: wrap;
 	align-items: flex-start;
 	justify-content: center;
-	padding-top: 95px;
+	padding-top: 115px;
 	@media screen and (min-width: $small-width) {
 		padding-top: 0;
 		align-items: center;
